; ModuleID = '/home/carl/AnghaBench/openssl/crypto/cms/extr_cms_smime.c_CMS_EncryptedData_decrypt.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/cms/extr_cms_smime.c_CMS_EncryptedData_decrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NID_pkcs7_encrypted = common dso_local global i64 0, align 8
@CMS_F_CMS_ENCRYPTEDDATA_DECRYPT = common dso_local global i32 0, align 4
@CMS_R_TYPE_NOT_ENCRYPTED_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CMS_EncryptedData_decrypt(i32* %0, i8* %1, i64 %2, i32* %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i64 %2, i64* %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @CMS_get0_type(i32* %16)
  %18 = call i64 @OBJ_obj2nid(i32 %17)
  %19 = load i64, i64* @NID_pkcs7_encrypted, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %25

21:                                               ; preds = %6
  %22 = load i32, i32* @CMS_F_CMS_ENCRYPTEDDATA_DECRYPT, align 4
  %23 = load i32, i32* @CMS_R_TYPE_NOT_ENCRYPTED_DATA, align 4
  %24 = call i32 @CMSerr(i32 %22, i32 %23)
  store i32 0, i32* %7, align 4
  br label %56

25:                                               ; preds = %6
  %26 = load i32*, i32** %11, align 8
  %27 = icmp ne i32* %26, null
  br i1 %27, label %33, label %28

28:                                               ; preds = %25
  %29 = load i32*, i32** %8, align 8
  %30 = call i32 @check_content(i32* %29)
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %33, label %32

32:                                               ; preds = %28
  store i32 0, i32* %7, align 4
  br label %56

33:                                               ; preds = %28, %25
  %34 = load i32*, i32** %8, align 8
  %35 = load i8*, i8** %9, align 8
  %36 = load i64, i64* %10, align 8
  %37 = call i64 @CMS_EncryptedData_set1_key(i32* %34, i32* null, i8* %35, i64 %36)
  %38 = icmp sle i64 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %33
  store i32 0, i32* %7, align 4
  br label %56

40:                                               ; preds = %33
  %41 = load i32*, i32** %8, align 8
  %42 = load i32*, i32** %11, align 8
  %43 = call i32* @CMS_dataInit(i32* %41, i32* %42)
  store i32* %43, i32** %14, align 8
  %44 = load i32*, i32** %14, align 8
  %45 = icmp ne i32* %44, null
  br i1 %45, label %47, label %46

46:                                               ; preds = %40
  store i32 0, i32* %7, align 4
  br label %56

47:                                               ; preds = %40
  %48 = load i32*, i32** %12, align 8
  %49 = load i32*, i32** %14, align 8
  %50 = load i32, i32* %13, align 4
  %51 = call i32 @cms_copy_content(i32* %48, i32* %49, i32 %50)
  store i32 %51, i32* %15, align 4
  %52 = load i32*, i32** %14, align 8
  %53 = load i32*, i32** %11, align 8
  %54 = call i32 @do_free_upto(i32* %52, i32* %53)
  %55 = load i32, i32* %15, align 4
  store i32 %55, i32* %7, align 4
  br label %56

56:                                               ; preds = %47, %46, %39, %32, %21
  %57 = load i32, i32* %7, align 4
  ret i32 %57
}

declare dso_local i64 @OBJ_obj2nid(i32) #1

declare dso_local i32 @CMS_get0_type(i32*) #1

declare dso_local i32 @CMSerr(i32, i32) #1

declare dso_local i32 @check_content(i32*) #1

declare dso_local i64 @CMS_EncryptedData_set1_key(i32*, i32*, i8*, i64) #1

declare dso_local i32* @CMS_dataInit(i32*, i32*) #1

declare dso_local i32 @cms_copy_content(i32*, i32*, i32) #1

declare dso_local i32 @do_free_upto(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
